html5player general improvements, fixes - annotation/caption unavailable tooltips will show where applicable - show gray fullscreen animation if no longer hovered over the fullscreen button - use proper standard urls in case hd playback fails - improved menus unhover code (thanks, RF64!) - improved scrubber unhover code (thanks, ljcool2006!) - fix annotations in embedded videos - fix caption languages showing multiple times in list when disabled and enabled
- fixed unreliable results of hd_1080 when video only had 720p
- fixed search results sometimes not showing videos with only_old
(thanks, griffen!)
- fixed auto_maintain sometimes crashing yt2009 at start
- fixed playlists without video lists causing search infinite wait
- add support for "recommended for you" section in /videos

--- a/assets/site-assets/html5-player.css
+++ b/assets/site-assets/html5-player.css
@@ -232,6 +232,7 @@
     width: 29px;
     height: 21px;
     background-image: url("/player-imgs/additions-buttons.png");
+    z-index: 9;
 }
 
 .player_additions_popout .annotations:hover, .player_additions_popout .cc:hover {
@@ -741,4 +742,48 @@
 
 .captions_selection, .captions_selection li {
     list-style: none;
+}
+
+.player_additions_tooltip {
+    position: absolute;
+    z-index: 5;
+}
+
+.player_additions_tooltip #tooltip-entry {
+    display: inline-block;
+    width: 7px;
+    height: 22px;
+    background-image: url("/player-imgs/player-additions-tooltip-outside.png");
+    overflow: hidden;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
+
+.player_additions_tooltip #tooltip-end {
+    display: inline-block;
+    width: 7px;
+    height: 22px;
+    background-image: url("/player-imgs/player-additions-tooltip-outside.png");
+    background-position: 7px 0px;
+    overflow: hidden;
+    position: absolute;
+    top: 0px;
+}
+
+.player_additions_tooltip #tooltip-text-container {
+    display: inline-block;
+    height: 22px;
+    background-image: url("/player-imgs/player-additions-tooltip-inside.png");
+    background-repeat: repeat;
+    position: absolute;
+    left: 7px;
+    top: 0px;
+}
+
+.player_additions_tooltip #tooltip-text {
+    color: white;
+    font-size: 10px;
+    position: relative;
+    top: 3px;
 }
